@@ -15,38 +15,39 @@ if [ "x$1" == "x" ]; then
     exit 1
 fi
 
-name=$1
+contrib=${1%/}
+
 #------------------------------------------------------------------------
 # make sure the name has not already been used
-if [ -e $name ]; then
-    echo "The $name contrib already exists. Please choose a different name"
+if [ -e $contrib ]; then
+    echo "The $contrib contrib already exists. Please choose a different name"
     exit 1
 fi
 
 echo "Creating contrib "$1
 
-name_lower=`echo ${name} | tr A-Z a-z`
-name_upper=`echo ${name} | tr a-z A-Z`
+contrib_lower=`echo ${contrib} | tr A-Z a-z`
+contrib_upper=`echo ${contrib} | tr a-z A-Z`
 date=`date "+%Y-%m-%d"`
 user=`whoami`
 
 
 #------------------------------------------------------------------------
 # create the structure
-mkdir $name
+mkdir $contrib
 
 for fn in `dirname $0`/internal/Template/*; do
     stripped=${fn##*internal/}
-    echo "  creating "${stripped//Template/${name}}
-    sed "s/Template/${name}/g;\
-         s/template/${name_lower}/g;\
-         s/TEMPLATE/${name_upper}/g;\
+    echo "  creating "${stripped//Template/${contrib}}
+    sed "s/Template/${contrib}/g;\
+         s/template/${contrib_lower}/g;\
+         s/TEMPLATE/${contrib_upper}/g;\
          s/20XX-XX-XX/${date}/g;\
          s/xxxx@localhost/${user}@localhost/g"\
-         ${fn} > ${stripped//Template/${name}}
+         ${fn} > ${stripped//Template/${contrib}}
 done
 echo "----------------------------------------------------------------------"
-echo "$name successfully created from Template. Rerun ./configure"
+echo "$contrib successfully created from Template. Rerun ./configure"
 echo "for it to be included in your builds."
 echo
 echo "Once you are ready to make it public, write to "
@@ -55,7 +56,7 @@ echo "to obtain write access to the fastjet-contrib svn repository "
 echo
 echo "You may then start to upload your contrib by running "
 echo
-echo "    scripts/register-new-contrib.sh ${name}"
+echo "    scripts/register-new-contrib.sh ${contrib}"
 echo
 echo "and following the instructions (details are in the README file)"
 echo "----------------------------------------------------------------------"
